# clinical_transcript_summariser

./: .gitignore  README.md  mise.toml  new_README.md  pyproject.toml
data/qwen3.5_latest/: dpo_pairs.jsonl  eval_in_dist.mse.jsonl  eval_in_dist.referral_a.discards.jsonl  eval_in_dist.referral_a.jsonl  eval_in_dist.soap.discards.jsonl  eval_in_dist.soap.jsonl  eval_zero_shot.mse.jsonl  eval_zero_shot.referral_b.discards.jsonl  eval_zero_shot.referral_b.jsonl  train.discards.jsonl  train.jsonl  train.mse.jsonl  train.referral_a.discards.jsonl  train.referral_a.jsonl  train.soap.discards.jsonl  train.soap.jsonl
data/qwen3.5_latest/preview/: 01.json  02.json  03.json  04.json  05.json  06.json  07.json  08.json  _meta.json
notebooks/: 00_kaggle_spike.ipynb  0_eda.ipynb  demo_v1_v2_v2.1_problems_local_gguf.ipynb  demo_v1_v2_v2.1_v3_problems_local_gguf_2_epochs_210pairs.ipynb  demo_v1_v2_v2.1_v3_problems_local_gguf_4_epochs_213pairs.ipynb  eval_v1_v2_local_gguf.ipynb  eval_v1_v2_v2.1_local_gguf.ipynb  qwen_reference_notebook.ipynb  v2-multitemplate-sft-report-README.md  v2-multitemplate-sft-unsloth-200run-output.ipynb  v2.1-multitemplate-sft-unsloth-200run-output.ipynb  v2_multitemplate_sft.ipynb  v3_dpo_pair_gen.ipynb  v3_dpo_train.ipynb
notes/: INTERVIEW.md
scripts/: gen_synth.py  gen_toy.py  migrate_add_template_field.py  smoke_local.py
src/: demo.py  prompts.py  toy_data.py  verifier.py
src/cts/: prompts.py
src/data_generation/: __init__.py  generate.py  stratify.py  validate.py
src/data_generation/templates/: __init__.py  mse.py  referral.py  soap.py
tests/: test_verifier.py
