[project]
name = "clinical-transcript-summariser"
version = "0.1.0"
description = "A repo for building a transcript summariser"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ollama>=0.6.1",
]

[dependency-groups]
train = [
    "torch>=2.4",
    "transformers>=4.45",
    "peft>=0.13",
    "trl>=0.11",
    "datasets>=3.0",
    "accelerate>=0.34",
    "bitsandbytes>=0.44",
]
lint = [
    # Tools for code quality
    "ty>=0.0.6",
    "pre-commit>=4.0.1",
    "ruff>=0.14.10",
    "commitizen>=4.12.0",
]
viz = [
    # Tools for visualization
    "matplotlib>=3.10.1",
    "plotly>=6.0.1",
]
dev = [
    # Standard dev group
    {include-group = "lint"},
    {include-group = "viz"},
    "gradio>=6.13.0",
    "ipykernel>=7.1.0",
    "ipython>=9.8.0",
    "marimo>=0.18.4",
    "py-spy>=0.4.1",
    "pytest>=9.0.2",
]
serve = [
    "fastapi>=0.136.1",
    "uvicorn>=0.40.0",
]

[tool.uv]
package = true # flipped to true	Required for pip install -e . on Kaggle to actually build/install your package
python-preference = "system" # forces to use system python (managed by mise)

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
cache-dir = "~/.cache/ruff"
indent-width = 4
line-length = 80
target-version = "py312"
fix = true
lint.select = [
    "E4",
    "E7",
    "E9",
    "F",
    "F401",
    "I"
]
lint.fixable = ["ALL"]
lint.unfixable = []
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
lint.ignore = []
include = ["*.py", "*.toml"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# Keep this ONLY if your imports are top-level relative to crewai
# (e.g., you write `import utils` instead of `import crewai.utils`)
# [tool.ty.environment]
# root = ["./crewai"]

[tool.ty.src]
include = ["src"]
exclude = ["src/tests", "src/demo.py"]

[tool.ty.rules]
unused-ignore-comment = "warn"
redundant-cast = "ignore"
possibly-missing-attribute = "error"
possibly-missing-import = "error"
index-out-of-bounds = "error"
# REGISTRY values are Any-typed dicts; false positives on index/arg checks
invalid-argument-type = "ignore"
